; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/tms320/extr_tms320_dasm.c_decode_swap.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/tms320/extr_tms320_dasm.c_decode_swap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@k6 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"SWAP ( )\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @decode_swap(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca [64 x i8], align 16
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = load i32, i32* @k6, align 4
  %6 = call i64 @field_valid(%struct.TYPE_5__* %4, i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %18

8:                                                ; preds = %1
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %13 = load i32, i32* @k6, align 4
  %14 = call i32 @field_value(%struct.TYPE_5__* %12, i32 %13)
  %15 = getelementptr inbounds [64 x i8], [64 x i8]* %3, i64 0, i64 0
  %16 = call i32 @get_swap_str(i32 %14, i8* %15)
  %17 = call i32 @substitute(i32 %11, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %16)
  br label %18

18:                                               ; preds = %8, %1
  ret void
}

declare dso_local i64 @field_valid(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @substitute(i32, i8*, i32) #1

declare dso_local i32 @get_swap_str(i32, i8*) #1

declare dso_local i32 @field_value(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
